# fileman

./: .devenv.flake.nix  .gitignore  .tmuxp.yaml  AGENTS.md  CMakeLists.txt  CONCEPT_MVP_LSD.md  Cargo.toml  DEVMAN_CORE_CONCEPTS.md  FILEMAN_CONCEPT.md  FILEMAN_CONCEPT_MVP.md  Justfile  Makefile  Package.swift  README.md  TEST_README.md  binding.gyp  devenv.nix  devenv.yaml  go.mod  grammar.js  lsd_parser.py  models.py  package.json  pathlib_collector.py  pyproject.toml  setup.py  test_validation.py  tree-sitter.json
.skills/: cli-parser-validation.md  devenv-justfile-integration.md
grammars/tree-sitter-python/: README.md  grammar.js  package.json
scripts/: fileman
skills/: devenv-justfile-integration.md  treesitter-grammar.md
templates/fileman/: .gitignore  README.md  manifest.toml
templates/fileman/.devman/templates/fileman/just/: fileman.just
templates/fileman/.devman/templates/fileman/nix/: fileman.devenv.nix
templates/fileman/.devman/templates/fileman/src/: fileman_snapshot.py
tests/: test_correctness.py  test_python_bootstrap.py
wrappers/: lsd-json  python-json
