[project]
name = "fileman-validation"
version = "0.1.0"
description = "Validation suite for lsd parser with Pydantic models"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
